unit 6 - creating footer

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
 			<img src="images/back.png" alt="King of Hearts">
 		</div>
 	</main>
+	<footer class="clearfix">
+		<p class="copywrite">Copywrite 2017</p>
+		<p class="message">
+			Created by <span class="name">sm</span>
+		</p>
+	</footer>
 </body>
 </html>
