unit 7 - adding javascript

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 	<title>Memory Card Game</title>
+	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<header>
