--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 	<title>Memory Card Game</title>
-	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 	<header>
@@ -17,12 +16,7 @@
 		<h2>Instructions</h2>
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 		<h3>Match the cards to win!</h3>
-		<div>
-			<img src="images/back.png" alt="Queen of Diamonds">
-			<img src="images/back.png" alt="Queen of Hearts">
-			<img src="images/back.png" alt="King of Diamonds">
-			<img src="images/back.png" alt="King of Hearts">
-		</div>
+		<div id='game-board' class="clearfixl"></div>
 	</main>
 	<footer class="clearfix">
 		<p class="copywrite">Copywrite 2017</p>
@@ -30,5 +24,6 @@
 			Created by <span class="name">sm</span>
 		</p>
 	</footer>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
