--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
 	<title>Memory Card Game</title>
 </head>
+
 <body>
 	<header>
 		<h1>Memory Game</h1>
@@ -14,7 +16,9 @@
 	</nav>
 	<main>
 		<h2>Instructions</h2>
-		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in
+			which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of
+			the game is to turn over pairs of matching cards.</p>
 		<h3>Match the cards to win!</h3>
 		<div id='game-board' class="clearfixl"></div>
 	</main>
@@ -26,4 +30,5 @@
 	</footer>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
+
 </html>
